--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "description": "Authorize.net CIM for Magento 2",
   "type": "magento2-module",
   "license": [
-    "OSL-3.0"
+    "proprietary"
   ],
   "require": {
     "magento/framework": "~100.1.0|~101.0.0",
