--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
   ],
   "require": {
     "magento/framework": "~100.1.0|~101.0.0",
-    "authorizenet/authorizenet": "~1.9.6"
+    "authorizenet/authorizenet": "~1.9.6",
+    "symfony/yaml": "^3.0",
   },
   "autoload": {
     "files": [
