--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "name": "tnw/module-authorizenetcim",
   "description": "Authorize.net CIM for Magento 2",
   "type": "magento2-module",
+  "version": "1.0.0",
   "license": [
     "proprietary"
   ],
