--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
   ],
   "require": {
     "magento/framework": "~100.1.0|~101.0.0",
-    "authorizenet/authorizenet": "~1.9.6"
+    "authorizenet/authorizenet": "~1.9.6",
+    "lcobucci/jwt": "~3.2.2"
   },
   "autoload": {
     "files": [
