--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ env:
   - MAGENTO_VERSION=2.2.3
   - MAGENTO_VERSION=2.2.2
   - MAGENTO_VERSION=2.2.1
-  - MAGENTO_VERSION=2.2.0
+#  - MAGENTO_VERSION=2.2.0
 before_install:
  - mysql -e 'CREATE DATABASE magento;' # create database
  - cd ../..
