--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,53 +89,21 @@ jobs:
       #      ./bin/magento dev:tests:run -c'--filter=TNW' unit
   "test-php-7.1-mage-2.2.3":
     <<: *common-build
-    docker:
-      - image: circleci/php:7.1-apache-node-browsers
-      - image: circleci/mysql:5.7
-        environment:
-          MYSQL_PASSWORD: mage
-          MYSQL_USER: mage
-          MYSQL_DATABASE: magento
-          MYSQL_ROOT_PASSWORD: docker
     environment:
       MAGENTO_VERSION: "2.2.3"
   "test-php-7.1-mage-2.2.2":
     <<: *common-build
-    docker:
-      - image: circleci/php:7.1-apache-node-browsers
-      - image: circleci/mysql:5.7
-        environment:
-          MYSQL_PASSWORD: mage
-          MYSQL_USER: mage
-          MYSQL_DATABASE: magento
-          MYSQL_ROOT_PASSWORD: docker
     environment:
       MAGENTO_VERSION: "2.2.2"
   "test-php-7.1-mage-2.2.1":
     <<: *common-build
-    docker:
-      - image: circleci/php:7.1-apache-node-browsers
-      - image: circleci/mysql:5.7
-        environment:
-          MYSQL_PASSWORD: mage
-          MYSQL_USER: mage
-          MYSQL_DATABASE: magento
-          MYSQL_ROOT_PASSWORD: docker
     environment:
       MAGENTO_VERSION: "2.2.1"
   "test-php-7.1-mage-2.2.5":
     <<: *common-build
-    docker:
-      - image: circleci/php:7.1-apache-node-browsers
-      - image: circleci/mysql:5.7
-        environment:
-          MYSQL_PASSWORD: mage
-          MYSQL_USER: mage
-          MYSQL_DATABASE: magento
-          MYSQL_ROOT_PASSWORD: docker
     environment:
       MAGENTO_VERSION: "2.2.5"
-  "test-php-7.0-mage-2.2.4":
+  "test-php-7.0-mage-2.2.4": &build-php7
     <<: *common-build
     docker:
       - image: circleci/php:7.0-apache-node-browsers
@@ -148,51 +116,19 @@ jobs:
     environment:
       MAGENTO_VERSION: "2.2.4"
   "test-php-7.0-mage-2.2.3":
-    <<: *common-build
-    docker:
-      - image: circleci/php:7.0-apache-node-browsers
-      - image: circleci/mysql:5.7
-        environment:
-          MYSQL_PASSWORD: mage
-          MYSQL_USER: mage
-          MYSQL_DATABASE: magento
-          MYSQL_ROOT_PASSWORD: docker
+    <<: *build-php7
     environment:
       MAGENTO_VERSION: "2.2.3"
   "test-php-7.0-mage-2.2.2":
-    <<: *common-build
-    docker:
-      - image: circleci/php:7.0-apache-node-browsers
-      - image: circleci/mysql:5.7
-        environment:
-          MYSQL_PASSWORD: mage
-          MYSQL_USER: mage
-          MYSQL_DATABASE: magento
-          MYSQL_ROOT_PASSWORD: docker
+    <<: *build-php7
     environment:
       MAGENTO_VERSION: "2.2.2"
   "test-php-7.0-mage-2.2.1":
-    <<: *common-build
-    docker:
-      - image: circleci/php:7.0-apache-node-browsers
-      - image: circleci/mysql:5.7
-        environment:
-          MYSQL_PASSWORD: mage
-          MYSQL_USER: mage
-          MYSQL_DATABASE: magento
-          MYSQL_ROOT_PASSWORD: docker
+    <<: *build-php7
     environment:
       MAGENTO_VERSION: "2.2.1"
-  "test-php-7.0-mage-2.2.5": &build-2.2.5-php7
-    <<: *common-build
-    docker:
-      - image: circleci/php:7.0-apache-node-browsers
-      - image: circleci/mysql:5.7
-        environment:
-          MYSQL_PASSWORD: mage
-          MYSQL_USER: mage
-          MYSQL_DATABASE: magento
-          MYSQL_ROOT_PASSWORD: docker
+  "test-php-7.0-mage-2.2.5":
+    <<: *build-php7
     environment:
       MAGENTO_VERSION: "2.2.5"
 workflows:
