--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 
 jobs:
-  "test-php-7.1-mage-2.2.4": &common-build
+  "test-php-7.1-mage-2.2.4": &php71-build
     docker:
       - image: circleci/php:7.1-apache-node-browsers
       - image: circleci/mysql:5.7
@@ -88,23 +88,23 @@ jobs:
       #      cd /var/www/html/magento2-$MAGENTO_VERSION
       #      ./bin/magento dev:tests:run -c'--filter=TNW' unit
   "test-php-7.1-mage-2.2.3":
-    <<: *common-build
+    <<: *php71-build
     environment:
       MAGENTO_VERSION: "2.2.3"
   "test-php-7.1-mage-2.2.2":
-    <<: *common-build
+    <<: *php71-build
     environment:
       MAGENTO_VERSION: "2.2.2"
   "test-php-7.1-mage-2.2.1":
-    <<: *common-build
+    <<: *php71-build
     environment:
       MAGENTO_VERSION: "2.2.1"
   "test-php-7.1-mage-2.2.5":
-    <<: *common-build
+    <<: *php71-build
     environment:
       MAGENTO_VERSION: "2.2.5"
-  "test-php-7.0-mage-2.2.4": &build-php7
-    <<: *common-build
+  "test-php-7.0-mage-2.2.4": &php70-build
+    <<: *php71-build
     docker:
       - image: circleci/php:7.0-apache-node-browsers
       - image: circleci/mysql:5.7
@@ -116,19 +116,19 @@ jobs:
     environment:
       MAGENTO_VERSION: "2.2.4"
   "test-php-7.0-mage-2.2.3":
-    <<: *build-php7
+    <<: *php70-build
     environment:
       MAGENTO_VERSION: "2.2.3"
   "test-php-7.0-mage-2.2.2":
-    <<: *build-php7
+    <<: *php70-build
     environment:
       MAGENTO_VERSION: "2.2.2"
   "test-php-7.0-mage-2.2.1":
-    <<: *build-php7
+    <<: *php70-build
     environment:
       MAGENTO_VERSION: "2.2.1"
   "test-php-7.0-mage-2.2.5":
-    <<: *build-php7
+    <<: *php70-build
     environment:
       MAGENTO_VERSION: "2.2.5"
 workflows:
