--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
       "registration.php"
     ],
     "psr-4": {
-      "TNW\\AuthorizenetCim\\": ""
+      "TNW\\AuthorizeCim\\": ""
     }
   }
 }
