--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "proprietary"
   ],
   "require": {
-    "magento/framework": "~100.1.0|~101.0.0",
+    "magento/framework": "101.0.*",
     "authorizenet/authorizenet": "~1.9.6",
     "tnw/marketing": "~2",
     "lcobucci/jwt": "~3.2.2"
