--- a/composer.json
+++ b/composer.json
@@ -2,12 +2,12 @@
   "name": "tnw/module-authorizenetcim",
   "description": "Authorize.net CIM for Magento 2",
   "type": "magento2-module",
-  "version": "2.1.6",
+  "version": "2.1.7",
   "license": [
     "proprietary"
   ],
   "require": {
-    "magento/framework": "~100.1.0|~101.0.0",
+    "magento/framework": ">100",
     "authorizenet/authorizenet": "~1.9.6",
     "tnw/marketing": "~2",
     "lcobucci/jwt": "~3.2.2"
